--- a/src/components/sassVariables/_variables.scss
+++ b/src/components/sassVariables/_variables.scss
@@ -16,3 +16,10 @@ $pomodoroSliderThumbBgActive:rgb(95, 6, 6);
 $pomodoroSliderTrackBg:rgba(95, 6, 6, 0.3);
 //Display variables
 $transitionTime: 2000ms;
+//NavBar
+$pomodoroButtonBg: rgb(225, 107, 107);
+$pomodoroButtonBgActive: rgb(212, 64, 64);
+$restButtonBg: rgb(131, 198, 243);
+$restButtonBgActive: rgb(63, 163, 230);
+//Menu
+$boxShadowMenu: 0px 5px 5px rgb(53, 53, 53);
