--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -7,6 +7,8 @@
         border-radius: 50%;
         padding: 15px;
         border: 5px solid;
+        box-shadow: -5px -5px 5px black;
+        transition: all 200ms;
         &.start {
             border-color: $playBorderColor;
             color: $playBorderColor;
@@ -36,6 +38,10 @@
                 color: $resetBackgroundColor;
                 background-color: $resetBorderColor;
             }
+        }
+        &:hover {
+            box-shadow: none;
+            transition: all 200ms;
         }
     }
 }
