--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -1,28 +1,46 @@
 @import "../sassVariables/variables";
-li {
+.Navbar {
     list-style-type: none;
     display: inline-block;
-    margin: 5px 5px 0 0;
+    border-radius: 5px;
+    margin: 0px 25px 0 0;
     padding: 0x;
-    &.active {
-        background-color: $bg-color;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        box-shadow: -3px -3px 3px;
-    }
-    &:hover {
-        background-color: $bg-color;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        box-shadow: -3px -3px 3px;
-        cursor: pointer;
+    &.Work {
+        background-color: $pomodoroButtonBg;
         transition: all 500ms;
+        &.active {
+            background-color: $pomodoroButtonBgActive;
+            box-shadow: -3px -3px 3px;
+        }
+        &:hover {
+            background-color: $pomodoroButtonBgActive;
+            border-radius: 5px;
+            box-shadow: -3px -3px 3px;
+            cursor: pointer;
+            transition: all 500ms;
+        }
+    }
+    &.Rest {
+        background-color: $restButtonBg;
+        transition: all 500ms;
+        &.active {
+            background-color: $restButtonBgActive;
+            border-radius: 5px;
+            box-shadow: -3px -3px 3px;
+        }
+        &:hover {
+            background-color: $restButtonBgActive;
+            border-radius: 5px;
+            box-shadow: -3px -3px 3px;
+            cursor: pointer;
+            transition: all 500ms;
+        }
     }
 }
 
 button.navbar-button {
-    font-size: 120%;
-    padding: 15px 20px;
+    font-size: 80%;
+    padding: 10px 15px;
     border: none;
     background-color: rgba(0, 0, 0, 0);
 }
