--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,16 @@
 @import "./components/sassVariables/variables";
+@font-face {
+    font-family: 'upheavtt';
+    src: url('./fonts/upheavtt.ttf');
+}
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    font-family: 'upheavtt', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-size: 150%;
     background-color: $bg-color;
 }
 
