--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 .App {
+    position: fixed;
     display: flex;
     margin: 0 auto;
     text-align: center;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
